--- a/style.css
+++ b/style.css
@@ -91,7 +91,32 @@ th, td{
     margin: 20px;
 }
 .excluir,.menosPeso,.maisPeso{
+    font-weight: bold;
     width: 80px;
     height: 20px;
     margin: 5px;
+}
+.magreza{
+    background-color: rgb(139, 0, 0);
+    color: white;
+}
+.saudavel{
+    background-color: rgb(165, 42, 42);
+    color: white;
+}
+.sobrepeso{
+    background-color: rgb(178, 34, 34);
+    color: white;
+}
+.obesidade1{
+    background-color: rgb(128, 128, 0);
+    color: white;
+}
+.obesidade2{
+    background-color: rgb(85, 107, 47);
+    color: white;
+}
+.obesidade3{
+    background-color: rgb(0, 100, 0);
+    color: white;
 }
