--- a/style.css
+++ b/style.css
@@ -1,10 +1,21 @@
+html, body{
+    margin: 0;
+    padding: 0;;
+    height: 100%;
+}
+body{
+    background-image: linear-gradient(to bottom,rgb(2, 2, 104), rgb(103, 2, 103));
+    color: white;
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 1);
+}
 header{
     display: flex;
     align-items: center;
     justify-content: center;
     font-size: 30px;
     font-family: Arial, Helvetica, sans-serif;
-    margin: 50px;
+    padding: 3%;
+    background-color: transparent;
 }
 main{
     display: inline-flex;
